deployment/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  namespace: learnecke
spec:
  selector:
    matchLabels:
      app: frontend-v2
  replicas: 1
  template:
    metadata:
      annotations:
        depsync.gexops.com/enabled: 'true'
      labels:
        app: frontend-v2
    spec:
      containers:
      - name: frontend-v2
        image: 316220230151.dkr.ecr.us-east-1.amazonaws.com/learnecke/frontend-v2:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      dnsPolicy: ClusterFirst
