deployment/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-v2
  name: frontend-v2-service
  namespace: learnecke
spec:
  ports:
  - name: tcp-frontend-v2
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend-v2
  type: ClusterIP
